# spandsp

./: .drone.yml  .gitattributes  .gitignore  Makefile.am  README  README.testdata  autogen.sh  configure.ac  debian-prepare.sh  spandsp.spec  spandsp3.pc.in  wrapper.xsl  yum-prepare.sh
.github/docker/centos/7/amd64/: Dockerfile
.github/docker/debian/bookworm/amd64/: Dockerfile  fsa.unstable.Dockerfile
.github/docker/debian/bookworm/arm32v7/: Dockerfile
.github/docker/debian/bookworm/arm64v8/: Dockerfile
.github/docker/debian/bullseye/amd64/: Dockerfile
.github/docker/debian/bullseye/arm32v7/: Dockerfile
.github/docker/debian/bullseye/arm64v8/: Dockerfile
.github/docker/debian/buster/amd64/: Dockerfile
.github/docker/debian/buster/arm32v7/: Dockerfile
.github/docker/debian/buster/arm64v8/: Dockerfile
.github/docker/debian/trixie/amd64/: Dockerfile
.github/docker/debian/trixie/arm32v7/: Dockerfile
.github/docker/debian/trixie/arm64v8/: Dockerfile
.github/workflows/: build.yml  cicd.yml  scan-build.yml  windows.yml
debian/: changelog  control  copyright  libspandsp-dev.install  libspandsp3-dev.install  libspandsp3-doc.install  libspandsp3.install  libspandsp6.install  rules
doc/: Makefile.am  wrapper.xsl
m4/: ax_c99_features.m4  ax_check_arm_neon.m4  ax_compiler_vendor.m4  ax_func_aligned_alloc.m4  ax_func_memmove.m4
spandsp/: fax-tests.xml  fax-tests.xsd  meteor.dtd  meteor.xsd  tones.xsd  tsb85.xml
spandsp-sim/: Makefile.am  g1050.c  libspandsp_sim.vcxproj  test_utils.c
spandsp-sim/spandsp/: g1050.h
src/: Makefile.am  ademco_contactid.c  adsi.c  agc_float.c  alloc.c  async.c  at_interpreter.c  awgn.c  bell_r2_mf.c  bert.c  bit_operations.c  bitstream.c  complex_filters.c  complex_vector_float.c  complex_vector_int.c  crc.c  data_modems.c  dds_float.c  dds_int.c  dtmf.c  echo.c  fax.c  fax_modems.c  filter_tools.c  floating_fudge.h  fsk.c  g711.c  g722.c  g726.c  godard.c  gsm0610_decode.c  gsm0610_encode.c  gsm0610_local.h  gsm0610_long_term.c  gsm0610_lpc.c  gsm0610_preprocess.c  gsm0610_rpe.c  gsm0610_short_term.c  hdlc.c  ima_adpcm.c  (+91 more)
src/msvc/: config.h  inttypes.h  make_at_dictionary.2017.vcxproj  make_cielab_luts.vcxproj  make_math_fixed_tables.vcxproj  make_modem_filter.2017.vcxproj  make_t43_gray_code_tables.vcxproj  spandsp.h
src/spandsp/: ademco_contactid.h  adsi.h  agc_float.h  arctan2.h  async.h  at_interpreter.h  bell_r2_mf.h  biquad.h  bit_operations.h  complex.h  complex_vector_float.h  complex_vector_int.h  data_modems.h  dc_restore.h  dds.h  dtmf.h  expose.h  fast_convert.h  fax_modems.h  fir.h  fsk.h  g711.h  godard.h  gsm0610.h  hdlc.h  logging.h  modem_connect_tones.h  modem_echo.h  noise.h  power_meter.h  saturated.h  sig_tone.h  silence_gen.h  sprt.h  ssl_fax.h  sslfax.h  super_tone_rx.h  t30.h  t30_api.h  t30_logging.h  (+23 more)
src/spandsp/private/: ademco_contactid.h  adsi.h  agc_float.h  async.h  at_interpreter.h  bell_r2_mf.h  data_modems.h  dtmf.h  fax_modems.h  fsk.h  godard.h  hdlc.h  modem_connect_tones.h  modem_echo.h  sig_tone.h  silence_gen.h  sprt.h  ssl_fax.h  sslfax.h  super_tone_rx.h  t30.h  t31.h  t38_core.h  t38_gateway.h  t38_terminal.h  t4_t6_decode.h  v150_1.h  v150_1_sse.h  v17rx.h  v17tx.h  v18.h  v22bis.h  v27ter_rx.h  v27ter_tx.h  v29rx.h  v29tx.h  v32bis.h  v34.h  v42.h  v42bis.h  (+2 more)
src/spandsp3/: expose.h
test-data/: Makefile.am
test-data/bellcore/: Makefile.am  README
test-data/etsi/fax/: Makefile.am
test-data/itu/: Makefile.am
test-data/itu/tiff-fx/: Makefile.am  README
test-data/local/: Makefile.am  lenna-bw-bilevel.tif  lenna-bw.tif  lenna-colour-bilevel.tif  lenna-colour-out.tif
test-data/mitel/: Makefile.am  README
tests/: Makefile.am  ademco_contactid_tests.c  adsi_tests.c  agc_float_tests.c  alloc_tests.c  async_tests.c  at_interpreter_tests.c  awgn_tests.c  bell_mf_rx_tests.c  bell_mf_tx_tests.c  bert_tests.c  bit_operations_tests.c  bitstream_tests.c  complex_vector_float_tests.c  complex_vector_int_tests.c  crc_tests.c  data_modems_tests.c  dc_restore_tests.c  dds_tests.c  dtmf_rx_tests.c  dtmf_tx_tests.c  dummy_modems_tests.c  echo_monitor.cpp  echo_tests.c  fax_decode.c  fax_tester.c  fax_tester.h  fax_tests.c  fax_tests.sh  fax_utils.c  fsk_tests.c  g1050_tests.c  g168_tests.c  g711_tests.c  g722_tests.c  g726_tests.c  gsm0610_tests.c  hdlc_tests.c  ima_adpcm_tests.c  image_translate_tests.c  (+67 more)
tests/msvc/: complex_tests.vcxproj  complex_vector_float_tests.vcxproj  complex_vector_int_tests.vcxproj  dtmf_rx_tests.vcxproj  dtmf_tx_tests.vcxproj  queue_tests.vcxproj  t38_core_tests.vcxproj  t38_non_ecm_buffer_tests.vcxproj  v22bis_tests.vcxproj  v29_tests.vcxproj  v80_tests.vcxproj  v8_tests.vcxproj  vector_float_tests.vcxproj  vector_int_tests.vcxproj
tools/: Makefile.am  ae.h  meteor-engine.c  meteor-engine.h  meteor.c
win/: .gitignore  SpanDSP.sln
win/libs/win32/libjpeg/: libjpeg.vcxproj
win/libs/win32/libtiff/: libtiff.vcxproj
win/libs/win32/spandsp/: libspandsp.vcxproj  make_at_dictionary.vcxproj  make_cielab_luts.vcxproj  make_math_fixed_tables.vcxproj  make_modem_filter.vcxproj  make_modem_godard_descriptor.vcxproj  make_t43_gray_code_tables.vcxproj  make_v34_convolutional_coders.vcxproj  make_v34_probe_signals.vcxproj  make_v34_shell_map.vcxproj  make_v34_tx_pre_emphasis_filters.vcxproj
win/w32/: spandsp.props
